Red River Mart/src/components/sellComponent/sellPage.css
.sellPage {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  width: 400px;
  margin: 2rem auto;
  padding: 2.5rem 2rem;
  background: white;
  border-radius: 12px;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
}

.sellPage h2 {
  text-align: center;
  margin-bottom: 1rem;
  font-size: 1.5rem;
  color: black;
}

.sellPage label {
  color: black;
  margin-top: 0.5rem;
}

.sellPage input[type="text"], .sellPage input[type="number"], .sellPage input[type="file"] {
  width: 100%;
  padding: 0.75rem 1rem;
  border: 1px solid #d3d3d3;
  border-radius: 8px;
  font-size: 1rem;
  transition: border-color 0.3s ease-in-out;
}

.sellPage input[type="text"]:focus, .sellPage input[type="number"]:focus, .sellPage input[type="file"]:focus {
  outline: none;
  border-color: #550000;
}

.sellPage button[type="submit"] {
  width: 100%;
  padding: 0.75rem 1.5rem;
  background-color: #550000;
  color: #f9f3ed;
  border: 1px solid #550000;
  cursor: pointer;
  transition: all 0.3s ease-in-out;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
  margin-top: 1rem;
}

.sellPage button[type="submit"]:hover {
  background-color: #440000;
  border-color: #440000;
  transform: translateY(-2px);
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25);
}

